# gfwx

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt
include/cgfwx/: CMakeLists.txt  cgfwx.h
include/gfwx/: CMakeLists.txt  gfwx.hpp
libcgfwx/: CMakeLists.txt  cgfwx.c
libgfwx/: CMakeLists.txt  gfwx.cpp  gfwx.hpp
test/: CMakeLists.txt
test/compression/: CMakeLists.txt  main.cpp
